# DDBSC

./: CMakeLists.txt  README.md  client.config
src/: backup.h  chunk_phase.c  config.c  destor.c  destor.h  do_backup.c  do_restore.c  hash_phase.c  jcr.c  jcr.h  net_phase.c  read_phase.c
src/chunking/: BBM_chunking.c  ae_chunking.c  chunking.h  fascdc_chunking.c  rabin_chunking.c
src/net/: network.c  network.h
src/recipe/: recipestore.c  recipestore.h
src/utils/: queue.h
